--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
 
             <div class="row justify-content-center mb-5">
                 <div class="col-md-7 text-center border-primary">
-                    <h2 class="font-weight-light text-primary">Testimonials</h2>
+                    <h2 class="font-weight-light text-primary">Hoor het eens van een ander</h2>
                 </div>
             </div>
 
@@ -346,16 +346,10 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                 <div>
                     <div class="testimonial">
                         <figure class="mb-4">
-                            <img src="images/person_1.jpg" alt="Image" class="img-fluid mb-3">
 
                         </figure>
                         <blockquote>
-                            <p>&ldquo;Ingmar is a musical prodigy. Working with him was
-                                a complete dream. Not only did he have a passion
-                                for music, but the energy and excitement that he
-                                brought to classes was unmatched. I wholeheartedly
-                                recommend Ingmar for any and all festivals!&rdquo;</p>
-                            <p class="author"> &mdash; Stacey Smith</p>
+                            <p>&ldquo;Iedereen die zijn lachspieren wil trainen en die zin heeft om een avond mee te deinen op de golven van immens enthousiasme, verwijs ik bij deze dan ook graag door naar Commotie.&rdquo;</p>
                         </blockquote>
                     </div>
                 </div>
