--- a/index.html
+++ b/index.html
@@ -53,13 +53,8 @@
 
                     <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                         <li><a href="#section-home" class="nav-link">Home</a></li>
-                        <li class="has-children">
-                            <a href="#section-about" class="nav-link">Over Ons</a>
-                            <ul class="dropdown">
-                                <li><a href="#section-how-it-works" class="nav-link">Wat doen we?</a></li>
-                                <li><a href="#section-our-team" class="nav-link">Onze Spelers</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="#section-about" class="nav-link">Over Ons</a></li>
+                        <li><a href="#section-our-team" class="nav-link">Onze Spelers</a></li>
                         <li><a href="#section-aanbod" class="nav-link">Aanbod</a></li>
                         <li><a href="#section-portfolio" class="nav-link">Portfolio</a></li>
                         <!--<li><a href="#section-blog" class="nav-link">Blog</a></li>-->
@@ -349,7 +344,9 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
 
                         </figure>
                         <blockquote>
-                            <p>&ldquo;Iedereen die zijn lachspieren wil trainen en die zin heeft om een avond mee te deinen op de golven van immens enthousiasme, verwijs ik bij deze dan ook graag door naar Commotie.&rdquo;</p>
+                            <p>&ldquo;Iedereen die zijn lachspieren wil trainen en die zin heeft om een avond mee te deinen op de golven van immens enthousiasme, 
+                                verwijs ik bij deze dan ook graag door naar Commotie.&rdquo;</p>
+                            <p class="author"> &mdash; Publiekslid</p>
                         </blockquote>
                     </div>
                 </div>
