--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <li><a href="#section-home" class="nav-link">Home</a></li>
                         <li><a href="#section-about" class="nav-link">Over Ons</a></li>
                         <li><a href="#section-our-team" class="nav-link">Onze Spelers</a></li>
-                        <li><a href="#section-aanbod" class="nav-link">Aanbod</a></li>
+                        <li><a href="#section-voorstellingen" class="nav-link">Voorstellingen</a></li>
                         <li><a href="#section-portfolio" class="nav-link">Portfolio</a></li>
                         <!--<li><a href="#section-blog" class="nav-link">Blog</a></li>-->
                         <li><a href="#section-contact" class="nav-link">Contact</a></li>
@@ -212,12 +212,11 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
     </div>
 
 
-    <div class="site-section bg-light" id="section-aanbod">
+    <div class="site-section bg-light" id="section-voorstellingen">
         <div class="container">
             <div class="row justify-content-center mb-5" data-aos="fade-up">
                 <div class="col-md-7 text-center border-primary">
-                    <h2 class="mb-0 text-primary">Ons Aanbod</h2>
-                    <p class="color-black-opacity-5">Onze beproefde voorstellingen</p>
+                    <h2 class="mb-0 text-primary">Onze voorstellingen</h2>
                 </div>
             </div>
             <div class="row align-items-stretch">
