--- a/index.html
+++ b/index.html
@@ -250,6 +250,16 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                         </div>
                     </div>
                 </div>
+                <div class="col-12 col-md-3" data-aos="fade-up" data-aos-delay="200">
+                    <div class="unit-4 d-flex">
+                        <div class="unit-4-icon mr-3"><span class="text-primary ticon-theater"></span></div>
+                        <div>
+                            <h3>De Beat</h3>
+                            <p>Een ritmische kracht drijft de show tot het uiterste. </p>
+                            <!--<p><a href="#">Learn More</a></p>-->
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -349,25 +359,11 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                         </blockquote>
                     </div>
                 </div>
-                <div>
-                    <div class="testimonial">
-                        <figure class="mb-4">
-                            <img src="images/person_2.jpg" alt="Image" class="img-fluid mb-3">
 
-                        </figure>
-                        <blockquote>
-                            <p>&ldquo;These [players] are perfect together. Super funny,
-                                skilled, giving an amazing show. They sing perfectly
-                                and they are very handsome&rdquo;</p>
-                            <p class="author"> &mdash; Hila Di Castro</p>
-                        </blockquote>
-                    </div>
-                </div>
 
                 <div>
                     <div class="testimonial">
                         <figure class="mb-4">
-                            <img src="images/person_3.jpg" alt="Image" class="img-fluid mb-3">
                         </figure>
                         <blockquote>
                             <p>&ldquo;Commotie slingerde me zonder enige moeite van de ene emotie de andere in. Vlotjes weefden ze geïmproviseerde liedjes in hun spel, het ene meezingbaar, een ander het muzikale equivalent van een koortsdroom, nog anderen rechtstreeks de lachspier prikkelend. Ronduit verbazend, onvergelijkbaar !.&rdquo;</p>
