--- a/index.html
+++ b/index.html
@@ -353,6 +353,39 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
 
                         </figure>
                         <blockquote>
+                            <p>&ldquo;Het is altijd een plezier om Commotie aan het werk te zien! Het veelzijdige team neemt je mee in hun improvisatie van spel, muziek en humor. Nog nooit een impromusical gezien? Zeker doen, ‘t is de moeite!&rdquo;</p>
+                            <p class="author"> &mdash; Hannah Paternoster</p>
+                        </blockquote>
+                    </div>
+                </div>
+                <div>
+                    <div class="testimonial">
+                        <figure class="mb-4">
+
+                        </figure>
+                        <blockquote>
+                            <p>&ldquo;Lachen en gieren met het muziekaal improtalent van Commotie. Zelden zo'n plezier gehad, zo aangenaam verrast, bij een voorstelling. Ze zoeken diepte in het absurde en nemen het publiek mee in hun wonderlijke hersenkronkels. Een aanrader voor ieder die van improvisatietheater houdt.&rdquo;</p>
+                            <p class="author"> &mdash; Lauranne Pouliart</p>
+                        </blockquote>
+                    </div>
+                </div>
+                <div>
+                    <div class="testimonial">
+                        <figure class="mb-4">
+
+                        </figure>
+                        <blockquote>
+                            <p>&ldquo;Wie dacht dat impro chaotisch kan zijn, heeft helemaal gelijk - en Commotie bewijst waarom dat fantastisch is. Een wervelwind van energie, muzikaliteit en ongefilterde lol.&rdquo;</p>
+                            <p class="author"> &mdash; Mattia Balloni</p>
+                        </blockquote>
+                    </div>
+                </div>
+                <div>
+                    <div class="testimonial">
+                        <figure class="mb-4">
+
+                        </figure>
+                        <blockquote>
                             <p>&ldquo;Iedereen die zijn lachspieren wil trainen en die zin heeft om een avond mee te deinen op de golven van immens enthousiasme, 
                                 verwijs ik bij deze dan ook graag door naar Commotie.&rdquo;</p>
                             <p class="author"> &mdash; Publiekslid</p>
