--- a/shows/index.html
+++ b/shows/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting to Amai Comedy Club...</title>
     
-    <meta http-equiv="refresh" content="0; url=https://www.amaicomedyclub.be/event-details/kemphanen-halve-finale-1" />
+    <meta http-equiv="refresh" content="0; url=https://forms.gle/eSvB8CBpPhLQK4HK7" />
     
     <script type="text/javascript">
-        window.location.replace("https://www.amaicomedyclub.be/event-details/kemphanen-halve-finale-1");
+        window.location.replace("https://forms.gle/eSvB8CBpPhLQK4HK7");
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, please <a href="https://www.amaicomedyclub.be/event-details/kemphanen-halve-finale-1">click here to visit the event page</a>.</p>
+    <p>If you are not redirected automatically, please <a href="https://forms.gle/eSvB8CBpPhLQK4HK7">click here to visit the event page</a>.</p>
 </body>
 </html>
